--- a/app/src/pages/inside/stepPage/modals/makeDecisionModal/optionsSection/itemsList/itemsListHeader/itemsListHeader.scss
+++ b/app/src/pages/inside/stepPage/modals/makeDecisionModal/optionsSection/itemsList/itemsListHeader/itemsListHeader.scss
@@ -18,7 +18,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 0 38px 16px 18px;
+  margin: 0 12px 12px 0;
 }
 
 .checkbox-label {
