--- a/app/src/pages/inside/stepPage/modals/postIssueModal/postIssueModal.scss
+++ b/app/src/pages/inside/stepPage/modals/postIssueModal/postIssueModal.scss
@@ -25,6 +25,7 @@
   box-sizing: border-box;
   &.dark-view {
     max-width: 600px;
+    padding: 0 24px;
   }
 }
 
@@ -92,7 +93,7 @@
   opacity: 0.9;
   font-size: 12px;
   color: $COLOR--gray-47;
-  font-family: $FONT-SEMIBOLD;
+  font-family: $FONT-REGULAR;
   text-transform: uppercase;
   &.dark-view {
     color: $COLOR--dirty-gray;
