--- a/app/src/pages/inside/stepPage/modals/unlinkIssueModal/unlinkIssueModal.scss
+++ b/app/src/pages/inside/stepPage/modals/unlinkIssueModal/unlinkIssueModal.scss
@@ -19,5 +19,6 @@
 }
 
 .main-text {
+  padding: 0 24px;
   color: $COLOR--white-two;
 }
